src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__unexpected_type_declaration_error_message.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected DataTypeDefinition but found `PROGRAM`
  ┌─ <internal>:2:17
  │
2 │                 PROGRAM
  │                 ^^^^^^^ Unexpected token: expected DataTypeDefinition but found `PROGRAM`

error[E007]: Unexpected token: expected `;` but found 'PROGRAM
                END_PROGRAM'
  ┌─ <internal>:2:17
  │  
2 │ ╭                 PROGRAM
3 │ │                 END_PROGRAM
  │ ╰───────────────────────────^ Unexpected token: expected `;` but found 'PROGRAM
                END_PROGRAM'

error[E006]: Missing expected Token `;`
  ┌─ <internal>:4:13
  │
4 │             END_TYPE
  │             ^^^^^^^^ Missing expected Token `;`

error[E007]: Unexpected token: expected `;` but found 'END_TYPE'
  ┌─ <internal>:4:13
  │
4 │             END_TYPE
  │             ^^^^^^^^ Unexpected token: expected `;` but found 'END_TYPE'
